9c1a4bc Update to reflect board-monarudo-gpu.c
6125287 Fix Spacing
ebad628 Update devices-8960.c
2a7d3f1 Revert "Update GPU Settings (2)"
86e4334 Update GPU Settings (2)
aa4f747 Bump Version 0.3.6
b719281 Update GPU Settings
19f64e7 Bump Version 0.3.5
520602f Fixed some spacing
cda4451 Hopefully fixed S2W and DT2W deep sleep issue
1aa0e36 Removed dlxj file, serves no purpose to this branch
465b7f8 Merge pull request #1 from schqiushui/patch-1
80e0fe7 Monarudo_M7_port to DLXJ
e72f47f Drop it like its hot!
10b6e65 Fix khz numbers for cmdline to set the min if it is the real min
4774f09 Update pocket_detect.c
023448c Added #ifdef CONFIG_POCKET_DETECT to ensure no issues if this is not defined
d768a5b  final gutting of 2d gpu from devices 8960 and transfer to board
73c62f5 fix merge d3rP
fa03849 fix merge d3rP
cb33201 finish merge of gpu 2d and cmdline control for gpu
c6c5296 fixup missing 2d table steps for monarudo
cc0538a Fix in_pocket logic to avoid possible issues
62de360 Decreased the sensitivity for dt2w to make it less accidental
5c58671 Cleaned up pocket_detect code
85e04e9 Created pocket_detect.c/.h to make it easier to deal with s2w/s2s and dt2w
0d00daf Revert "Fixing clock steps and refining L2 cache boost"
e8cb3cf update cm driver
050bdc1 finish removal of old s2w code
b3b2ea2 Updated synaptics_3200.c
7a9bcc9 Updated synaptics_3200.c to default pocket_detect to ON
a673737 adding pocket detect to new s2w/dt2w algo
f8eaf37 Update sweep2wake.c
4ddbf51 Bump Version 0.3.3
733eeb8 change i2c listen rates to reflect Showps hammerhead patch in hopes for wake from deep sleep
74fac1f Add s2w_s2sonly cmdline option
9b85eef Bump Version 0.3.2
356968e Change S2W and S2S to a single file 0=OFF 1=S2W/S2S 2=S2SONLY
1b6a4cc Updata S2W_Y_LIMIT for our device
17fa6d6 Bump Version 0.3.1
58b305d Comment out unsupported code
f2d3eb3 Updated Defconfig
f06a219 Merge branch '4.4.2_GPE' of https://github.com/zarboz/Monarudo_GPU_M7 into 4.4.2_GPE_KHbP
6b0cefa 12